fluxcd/apps/overlays/production/dd-ui(disabled)/app-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dd-ui
spec:
  template:
    spec:
      imagePullSecrets:
        - name: cr-pcfae-admin-pull-secret
      containers:
        - name: dd-ui
          image: docker.io/prplanit/dd-ui:v0.7.5
          volumeMounts:
            - name: hookshot-dd-ui-data
              mountPath: /data
            - name: ssh-key
              mountPath: /run/secrets/ssh_key
              subPath: ssh-key
              readOnly: true
  volumeClaimTemplates:
    - metadata:
        name: hookshot-dd-ui-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ceph-rbd-retain
        resources:
          requests:
            storage: 50Gi
