fluxcd/apps/overlays/production/dd-ui(disabled)/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dd-ui
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Remote Access (Hookshot🪝)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - dd-ui.pcfae.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dd-ui
          port: 443
